--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>私のホームページ</title>
+    <title>自己紹介ページ</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>ようこそ！</h1>
-        <p>GitHub Pagesを使った簡単なWebページ</p>
+        <h1>私の自己紹介</h1>
+        <p>ここに簡単な自己紹介を書いてみよう！</p>
     </header>
 
     <main>
-        <section class="card">
+        <section class="profile">
+            <img src="profile.jpg" alt="プロフィール画像">
+            <h2>名前</h2>
+            <p>〇〇〇〇（ここを自分の名前に変更）</p>
             <h2>自己紹介</h2>
-            <p id="introText">ここに自己紹介を書いてください。</p>
-            <input type="text" id="nameInput" placeholder="名前を入力">
-            <textarea id="bioInput" placeholder="簡単な自己紹介を書いてください"></textarea>
-            <button id="updateIntro">更新</button>
+            <p>〇〇〇〇（ここに好きなことや趣味を書く）</p>
+            <h2>連絡先</h2>
+            <p>Email: example@example.com（ここを自分のメールに変更）</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 あなたの名前</p>
+        <p>&copy; 2025 〇〇〇〇（名前）</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
